# yardmonitor

./: CLAUDE.md  README.md  client_upload.py  pyproject.toml  requirements.txt  run_camera_trap.py  run_dashboard.py  server.py
config/: camera_trap.yaml  models.yaml  server.yaml
deploy/: yardmonitor.service
yardmonitor/: __init__.py
yardmonitor/core/: pipeline.py
yardmonitor/dashboard/: app.py  camtrapdata.py  watering.py  weather.py
yardmonitor/dashboard/static/: style.css
yardmonitor/dashboard/templates/: base.html  index.html  settings.html
yardmonitor/sensors/audiomoth/: birdnet.py  darwin_core.py  ingest.py  pipeline.py
yardmonitor/sensors/camera_trap/: camtrap_dp.py  exif.py  ingest.py  megadetector.py  pipeline.py  speciesnet.py  timelapse.py
yardmonitor/server/: app.py  db.py  jobs.py  models_registry.py  pipeline_runner.py
yardmonitor/server/static/: server.css
yardmonitor/server/templates/: base.html  dashboard.html  deployment_detail.html  deployments.html  jobs.html  models.html  observations.html  timeline.html
yardmonitor/utils/: __init__.py  logging_utils.py  storage.py
